--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Abel&family=Cormorant+Garamond&family=Libre+Bodoni:ital@0;1&family=Montserrat&family=MuseoModerno:wght@100&family=Nanum+Myeongjo&family=Raleway&family=Slabo+27px&family=Tajawal:wght@300&family=Titillium+Web&display=swap"
-    rel="stylesheet">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
+
+
 
 
   <!--
@@ -21,6 +16,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Playfair+Display:ital@0;1&display=swap"
+    rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -33,11 +32,12 @@
   <title>React App</title>
 </head>
 
+
 <body>
-  
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
